--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "react-tabs": "^3.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
