--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,15 @@
-alembic==1.5.6
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
-Flask-Migrate==2.7.0
-Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
-Mako==1.1.4
 MarkupSafe==1.1.1
-psycopg2==2.8.6
 psycopg2-binary==2.8.6
-python-dateutil==2.8.1
 python-dotenv==0.15.0
-python-editor==1.0.4
-six==1.15.0
+requests==2.25.1
 SQLAlchemy==1.3.23
+urllib3==1.26.3
 Werkzeug==1.0.1
-discord
