--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,31 @@
+aiohttp==3.7.4.post0
 alembic==1.5.6
+async-timeout==3.0.1
+attrs==20.3.0
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
+discord==1.0.1
+discord.py==1.6.0
 Flask==1.1.2
 Flask-Migrate==2.7.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
+multidict==5.1.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
+requests==2.25.1
 six==1.15.0
 SQLAlchemy==1.3.23
+typing-extensions==3.7.4.3
+urllib3==1.26.3
 Werkzeug==1.0.1
-discord
+yarl==1.6.3
