--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,3 +29,6 @@ typing-extensions==3.7.4.3
 urllib3==1.26.3
 Werkzeug==1.0.1
 yarl==1.6.3
+requests==2.25.1
+Flask_JWT_Extended==4.1.0
+Flask_Cors==3.0.10
