--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
@@ -16,7 +20,9 @@
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
+    "react-table": "^7.6.3",
     "react-tabs": "^3.2.0",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
